# linear-algebra-lab

./: .gitignore  CMakeLists.txt  main.cpp  task1.py  task2.py  task3.py
Algebra/: algebra.cpp  algebra.h  gmres.h
Matrix/: abstract_matrix.cpp  abstract_matrix.h  diagonal_box_matrix.cpp  matrix.h  mutable_matrix.h
TimeMeasurer/: time_measurer.cpp  time_measurer.h
